# audiodevice

./: CMakeLists.txt  main.cc
src/: CMakeLists.txt  audiodevice.cc  audiodevice_creator.cc
src/alsa_backend/: alsa_audio_device.cc  alsa_audio_device.h
src/include/: audio_format.h  audiodevice.h  audiodevice_creator.h
